<resources>
    <!--title-->
    <string name="app_name">UTSLoanApp</string>
    <string name="title_activity_student_login">Student Login</string>
    <string name="title_activity_logo_page">Welcome</string>
    <string name="title_activity_main">Welcome</string>
    <string name="title_activity_staff_login">Staff Login</string>

    <string name="student_loan_application">Student Loan Application</string>
    <string name="student">Student</string>
    <string name="staff">Staff</string>
    <string name="logo">LOGO</string>
    <string name="student_id">Student ID</string>
    <string name="password">Password</string>
    <string name="login_help">login help</string>
    <string name="login">Login</string>

    <!--error msg-->
    <string name="id_empty_err_msg">ID must not be empty</string>
    <string name="invalid_id_err_msg">ID must be in 8 digits</string>
    <string name="password_empty_err_msg">Password must not be empty</string>
    <string name="password_length_err_msg">Length of the password must be between 6 to 20</string>
    <string name="login_failed_err_msg">Login Failed, Please Try Again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="staff_id">Staff ID</string>
    <string name="no_access_to_staff_err_msg">You DO NOT have the access to Staff system</string>
    <string name="no_access_to_Student_err_msg">You DO NOT have access to Student system</string>
    <string name="title_activity_settings">Settings</string>
    <string name="login_help_text">For login problems, \n please direct to UTS Online</string>
    <string name="ok_button_text">OK</string>
    <string name="logout">Logout</string>
    <string name="confirm_msg">Please confirm</string>
    <string name="cancel_msg">Cancel</string>
    <string name="confirm_btn_msg">Confirm</string>
    <string name="want_to_sign_out">Want to sign out?</string>
    <string name="get_me_back">Get me back</string>
    <string name="sign_me_out">Sign me out</string>
    <string name="create_form">Create Form</string>
    <string name="my_forms">My Forms</string>
    <string name="guidance">Guidance</string>
    <string name="application_forms">Application Forms</string>
    <string name="my_reviewing_forms">My Reviewing Forms</string>
    <string name="title_activity_create_form">Create Form</string>
    <string name="create_form_note_string"><![CDATA[*Note: Your click the -> button to check your personal information before submitting the form]]></string>
    <string name="personal_inforamtion">Personal Information</string>
    <string name="name">Name:</string>
    <string name="id">ID:</string>
    <string name="loan_information">Loan Information</string>
    <string name="amount">Amount:</string>
    <string name="dollarSign">$</string>
    <string name="enter_amount">Enter amount</string>
    <string name="usage">Usage:</string>
    <string name="select_usage">Select Usage</string>
    <string name="other_usage">Other Usage:</string>
    <string name="please_write_your_usage">Please write your usage</string>
    <string name="period_year">Period Year:</string>
    <string name="select_year">Select Year</string>
    <string name="repayment_months">Repayment Months:</string>
    <string name="select_months">Select Months</string>
    <string name="back_information">Bank Information</string>
    <string name="bsb">BSB:</string>
    <string name="your_bsb">Your BSB</string>
    <string name="account_num">Account Num:</string>
    <string name="your_account_number">Your Account Number</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>

    <!--Spinner-->
    <string name="select_usage_spinner">Select Usage</string>
    <string name="select_period_spinner">Select Year</string>
    <string name="select_repayment_spinner">Select Months</string>
    <string name="amount_help_msg">The amount of money that the you expect to spend on feeding the period of the loan time that the you are applying for.</string>
    <string name="usage_help_msg">The usage of the loan, for example your tuition fee</string>
    <string name="period_yesr_helpZ_msg">The academic period for which loan funds are used to cover the cost</string>
    <string name="repayment_help_msg">The maximum time period over which you expect to repay the loan.</string>
    <string name="other_usage_help_msg">If not match the above options, please put down the description about how you will spend the loan</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="not_sure">Not Sure</string>
    <string name="yes">Yes</string>
    <string name="internet_error">Internet Error</string>
    <string name="err_msg_amount_empty">Amount must not be empty</string>
    <string name="err_msg_amount_low">Amount too low</string>
    <string name="err_msg_amount_high">Amount too high</string>
    <string name="err_msg_bsb_empty">BSB must not be empty</string>
    <string name="err_msg_account_num_empty">Account number must not be empty</string>
    <string name="err_msg_usage_not_chosen">Usage must be chosen</string>
    <string name="err_msg_other_usage_empty">Please clarify your other usage</string>
    <string name="err_msg_loan_period_notZ_chosen">Loan period must be chosen</string>
    <string name="err_msg_repayment_not_chosen">Repayment period must be chosen</string>
    <string name="err_msg_bsb_wrong">BSB should be 6 digits</string>
    <string name="err_msg_account_num_wrong">Account number should be 6 - 8 digits</string>

    <string-array name="usage_list">
        <item>Select Usage</item>
        <item>Tuition</item>
        <item>Accommodation</item>
        <item>Tuition and Accommodation</item>
        <item>Other</item>
    </string-array>

    <string-array name="period_list">
        <item>Select Year</item>
        <item>1 Year</item>
        <item>2 Years</item>
        <item>3 Years</item>
        <item>4 Years</item>
    </string-array>

    <string-array name="repayment_list">
        <item>Select Months</item>
        <item>6 Months</item>
        <item>12 Months</item>
        <item>18 Months</item>
        <item>24 Months</item>
        <item>30 Months</item>
        <item>36 Months</item>
        <item>42 Months</item>
        <item>48 Months</item>
        <item>54 Months</item>
        <item>60 Months</item>
    </string-array>
    <string name="title_activity_student_my_forms">My Forms</string>
    <string name="title_activity_student_personal_detail">Personal Detail</string>
    <string name="help">Help</string>
    <string name="form_more_than_one_error_msg">You\'ve already got one form in editing or in process, please go to \'my forms\' to check it</string>
    <string name="reminder">Reminder</string>
    <string name="confirmation">Confirmation</string>
    <string name="to_be_submitted">To be submitted</string>
    <string name="to_be_issued">To be issued</string>
    <string name="title_activity_application_detail">Application Detail</string>
    <string name="please_click_the_for_student_s_personal_information"><![CDATA[Please click the \' --> \' for student\'s personal information]]></string>
    <string name="back">Back</string>
    <string name="start_review">Start Review</string>
    <string name="cannot_cancel_application_submission">You cannot cancel this application because it has been in process or has completed.</string>
    <string name="not_cancel_submission">Your application is waiting to be reviewed, are you sure you want to cancel this submission?</string>
    <string name="i_am_sure">I am sure</string>
    <string name="title_activity_guide">Guide</string>
    <string name="guidance_pop_up_msg">UTS Student Loan Application System Guidance Will Help You Go Through Every Aspect of The Application Form</string>
    <string name="all_application_forms">All Application Forms</string>
    <string name="title_activity_staff_all_forms">All Forms</string>
    <string name="search">Search...</string>
    <string name="start_review_msg">You just started to review an application form, go to your forms to check it</string>
    <string name="declare">Declare</string>
    <string name="start_review_conform_msg">Once you start review, you will be responsible for this application form, which cannot be changed in the future, are you sure?</string>
    <string name="cancel_application_msg">You have just cancelled an application</string>
    <string name="two_pick_one_msg">Please choose your answer very carefully</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="declared_result_confirm_msg">Once you have declared the result, it cannot be changed in the future, are you sure?</string>
    <string name="enter_reason_msg">Please enter the reject reason in the text field below</string>
    <string name="reject_reason">Reject Reason</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>

</resources>
