<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.staffLoginActivity.StaffLoginActivity"
    tools:showIn="@layout/activity_staff_login">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/staff_id"
        android:layout_marginTop="100dp"
        android:id="@+id/staff_login_staff_id_et"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:padding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/staff_login_password_et"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/staff_login_staff_id_et"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/staff_login_password_et"
        android:layout_marginTop="30dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:text="@string/login_help"
        android:textColor="@color/colorLightBlue"
        android:id="@+id/staff_login_help_tv"/>

    <ProgressBar
        android:id="@+id/staff_login_progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/staff_login_help_tv"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:text="@string/login"
        android:layout_marginTop="40dp"
        android:id="@+id/staff_login_login_btn"
        android:layout_below="@id/staff_login_help_tv"
        android:background="@color/colorWhite"
        android:padding="20dp"/>

</RelativeLayout>