<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.logoActivity.LogoPageActivity"
    tools:showIn="@layout/activity_logo_page">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_loan_application"
        android:layout_above="@+id/logo_image"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorLightBlue"
        android:textStyle="italic"
        />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:id="@+id/logo_image"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/uts_logo"
        android:contentDescription="@string/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimary">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:text="@string/student"
            android:id="@+id/logo_student_btn"
            android:layout_marginRight="5dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorLightBlue"
            android:layout_marginEnd="5dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:text="@string/staff"
            android:id="@+id/logo_staff_btn"
            android:layout_marginLeft="5dp"
            android:background="@drawable/text_view_boarder"
            android:layout_marginStart="5dp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>