<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorLightBlue"
        android:textStyle="bold"
        android:text="@string/confirm_msg"
        android:layout_alignParentTop="true"
        android:id="@+id/dialog_confirm_dialog_confirm_msg_tv"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/dialog_confirm_dialog_confirm_msg_tv"
        android:layout_margin="10dp"
        android:layout_marginBottom="5dp">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:background="@color/colorLightBlue"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="8dp"
            android:text="@string/cancel_msg"
            android:id="@+id/dialog_confirm_dialog_cancel_btn"
            android:layout_marginEnd="8dp" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:background="@drawable/text_view_boarder"
            android:text="@string/confirm_btn_msg"
            android:id="@+id/dialog_confirm_dialog_confirm_btn" />
    </LinearLayout>

</RelativeLayout>