<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.mainActivity.staffFragment.StaffFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Student Loan Application \n Staff System"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorGrey"
            android:textStyle="italic"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:id="@+id/student_fragment_title"
            />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:id="@+id/student_fragment_logo_image"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/uts_logo_2"
            android:layout_below="@+id/student_fragment_title"
            android:contentDescription="@string/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="30sp"
            android:padding="10sp"
            android:textColor="@color/colorGrey"
            android:text="@string/all_application_forms"
            android:textStyle="italic|bold"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/text_view_boarder_grey"
            android:layout_above="@+id/staff_fragment_my_forms_tv"
            android:layout_centerHorizontal="true"
            android:id="@+id/staff_fragment_all_application_forms_tv"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="30sp"
            android:padding="10sp"
            android:textStyle="italic|bold"
            android:textColor="@color/colorGrey"
            android:layout_marginBottom="68dp"
            android:text="@string/my_forms"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/text_view_boarder_grey"
            android:id="@+id/staff_fragment_my_forms_tv"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>

</FrameLayout>